--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -29,48 +29,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El año con más horas jugadas para el género Action es: 2012\n"
+      "{'Usuario con más horas jugadas para Género Action': 'DeEggMeister', 'Horas jugadas': [{'Año': 1994, 'Horas': 20.0}, {'Año': 1995, 'Horas': 80.0}, {'Año': 1998, 'Horas': 1504.0}, {'Año': 1999, 'Horas': 993.0}, {'Año': 2000, 'Horas': 7276.0}, {'Año': 2001, 'Horas': 295.0}, {'Año': 2002, 'Horas': 1388.0}, {'Año': 2003, 'Horas': 4608.0}, {'Año': 2004, 'Horas': 64061.0}, {'Año': 2005, 'Horas': 8908.0}, {'Año': 2006, 'Horas': 16235.0}, {'Año': 2007, 'Horas': 22869.0}, {'Año': 2008, 'Horas': 99995.0}, {'Año': 2009, 'Horas': 207187.0}, {'Año': 2010, 'Horas': 139111.0}, {'Año': 2011, 'Horas': 337126.0}, {'Año': 2012, 'Horas': 1182929.0}, {'Año': 2013, 'Horas': 460357.0}, {'Año': 2014, 'Horas': 192694.0}, {'Año': 2015, 'Horas': 274834.0}, {'Año': 2016, 'Horas': 111759.0}, {'Año': 2017, 'Horas': 87183.0}]}\n"
      ]
     }
    ],
    "source": [
-    "# Supongamos que tienes un nuevo DataFrame llamado Games_Genres_Price_df\n",
-    "# Contiene las columnas: app_name, release_date, id y columnas de géneros como Indie, Action, Casual, etc.\n",
-    "\n",
-    "# Supongamos que también tienes un DataFrame llamado df_items con las columnas necesarias\n",
-    "\n",
-    "# Función para calcular el año con más horas jugadas para un género específico sin considerar el precio\n",
-    "def PlayTime_Genre(genero: str):\n",
+    "# Función para encontrar el usuario con más horas jugadas para un género específico\n",
+    "def user_for_genre(genero: str):\n",
     "    # Verificar si el género está presente en las columnas de géneros\n",
     "    if genero not in Games_Genres_Price_df.columns:\n",
     "        return 'El género solicitado no está presente en los datos'\n",
-    "    \n",
     "    # Realizar un inner join entre Games_Genres_Price_df y df_items usando 'id' como clave\n",
     "    merged_df = Games_Genres_Price_df.merge(df_items, left_on='id', right_on='item_id', how='inner')\n",
-    "    \n",
     "    # Filtrar el DataFrame combinado por el género deseado\n",
     "    filtered_df = merged_df[merged_df[genero] == 1]\n",
-    "    \n",
-    "    # Calcular la suma de las horas jugadas por año\n",
-    "    playtime_by_year = filtered_df.groupby(filtered_df['release_date'].dt.year)['playtime_forever'].sum()\n",
-    "    \n",
-    "    # Encontrar el año con más horas jugadas\n",
-    "    year_with_most_playtime = playtime_by_year.idxmax()\n",
-    "    \n",
-    "    return year_with_most_playtime\n",
+    "    # Calcular la suma de las horas jugadas por usuario y año\n",
+    "    user_year_playtime = filtered_df.groupby(['user_id', filtered_df['release_date'].dt.year])['playtime_forever'].sum().reset_index()\n",
+    "    # Excluir el año 1900 de la suma de horas jugadas\n",
+    "    user_year_playtime = user_year_playtime[user_year_playtime['release_date'] != 1900]\n",
+    "    # Encontrar el usuario con más horas jugadas para el género\n",
+    "    user_with_most_playtime = user_year_playtime.groupby('user_id')['playtime_forever'].sum().idxmax()\n",
+    "    # Filtrar los datos del usuario con más horas jugadas\n",
+    "    user_most_playtime_data = user_year_playtime[user_year_playtime['user_id'] == user_with_most_playtime]\n",
+    "    # Crear una lista de acumulación de horas jugadas por año\n",
+    "    hours_played_by_year = [{'Año': year, 'Horas': playtime} for year, playtime in zip(user_most_playtime_data['release_date'], user_most_playtime_data['playtime_forever'])]\n",
+    "    # Devolver el resultado como un diccionario\n",
+    "    result = {\n",
+    "        f\"Usuario con más horas jugadas para Género {genero}\": user_with_most_playtime,\n",
+    "        \"Horas jugadas\": hours_played_by_year\n",
+    "    }\n",
+    "    return result\n",
     "\n",
     "# Ejemplo de uso de la función\n",
     "genero = 'Action'\n",
-    "año_con_mas_horas = PlayTime_Genre(genero)\n",
-    "print(f\"El año con más horas jugadas para el género {genero} es: {año_con_mas_horas}\")\n",
-    "\n"
+    "resultados = user_for_genre(genero)\n",
+    "print(resultados)\n"
    ]
   },
   {
