--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,62 +15,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Games_Genres_Price_df = pd.read_csv('./Games_Genres_Price_df.csv', parse_dates=['release_date'])\n",
     "df_games = pd.read_csv('./gamesNoGS.csv', parse_dates=['release_date'])\n",
     "df_items = pd.read_csv('./items.csv')\n",
     "df_reviews = pd.read_csv('./reviews_sentiment_analysis.csv')\n",
     "df_genres = pd.read_csv('./games_genres.csv')\n",
-    "df_specs = pd.read_csv('./games_specs.csv')"
+    "df_specs = pd.read_csv('./games_specs.csv')\n",
+    "df_games = pd.read_csv('./games.csv', parse_dates=['release_date'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        ['Action', 'Casual', 'Indie', 'Simulation', 'S...\n",
+       "1             ['Free to Play', 'Indie', 'RPG', 'Strategy']\n",
+       "2        ['Casual', 'Free to Play', 'Indie', 'Simulatio...\n",
+       "3                        ['Action', 'Adventure', 'Casual']\n",
+       "4                    ['Action', 'Adventure', 'Simulation']\n",
+       "                               ...                        \n",
+       "30080           ['Action', 'Adventure', 'Casual', 'Indie']\n",
+       "30081        ['Casual', 'Indie', 'Simulation', 'Strategy']\n",
+       "30082                      ['Casual', 'Indie', 'Strategy']\n",
+       "30083                    ['Indie', 'Racing', 'Simulation']\n",
+       "30084                                  ['Casual', 'Indie']\n",
+       "Name: genres, Length: 30085, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_games['genres']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Usuario con más horas jugadas para Género Action': 'DeEggMeister', 'Horas jugadas': [{'Año': 1994, 'Horas': 20.0}, {'Año': 1995, 'Horas': 80.0}, {'Año': 1998, 'Horas': 1504.0}, {'Año': 1999, 'Horas': 993.0}, {'Año': 2000, 'Horas': 7276.0}, {'Año': 2001, 'Horas': 295.0}, {'Año': 2002, 'Horas': 1388.0}, {'Año': 2003, 'Horas': 4608.0}, {'Año': 2004, 'Horas': 64061.0}, {'Año': 2005, 'Horas': 8908.0}, {'Año': 2006, 'Horas': 16235.0}, {'Año': 2007, 'Horas': 22869.0}, {'Año': 2008, 'Horas': 99995.0}, {'Año': 2009, 'Horas': 207187.0}, {'Año': 2010, 'Horas': 139111.0}, {'Año': 2011, 'Horas': 337126.0}, {'Año': 2012, 'Horas': 1182929.0}, {'Año': 2013, 'Horas': 460357.0}, {'Año': 2014, 'Horas': 192694.0}, {'Año': 2015, 'Horas': 274834.0}, {'Año': 2016, 'Horas': 111759.0}, {'Año': 2017, 'Horas': 87183.0}]}\n"
+      "{'year_with_most_playtime': 2012}\n"
      ]
     }
    ],
    "source": [
-    "# Función para encontrar el usuario con más horas jugadas para un género específico\n",
-    "def user_for_genre(genero: str):\n",
-    "    # Verificar si el género está presente en las columnas de géneros\n",
-    "    if genero not in Games_Genres_Price_df.columns:\n",
-    "        return 'El género solicitado no está presente en los datos'\n",
-    "    # Realizar un inner join entre Games_Genres_Price_df y df_items usando 'id' como clave\n",
-    "    merged_df = Games_Genres_Price_df.merge(df_items, left_on='id', right_on='item_id', how='inner')\n",
-    "    # Filtrar el DataFrame combinado por el género deseado\n",
-    "    filtered_df = merged_df[merged_df[genero] == 1]\n",
-    "    # Calcular la suma de las horas jugadas por usuario y año\n",
-    "    user_year_playtime = filtered_df.groupby(['user_id', filtered_df['release_date'].dt.year])['playtime_forever'].sum().reset_index()\n",
-    "    # Excluir el año 1900 de la suma de horas jugadas\n",
-    "    user_year_playtime = user_year_playtime[user_year_playtime['release_date'] != 1900]\n",
-    "    # Encontrar el usuario con más horas jugadas para el género\n",
-    "    user_with_most_playtime = user_year_playtime.groupby('user_id')['playtime_forever'].sum().idxmax()\n",
-    "    # Filtrar los datos del usuario con más horas jugadas\n",
-    "    user_most_playtime_data = user_year_playtime[user_year_playtime['user_id'] == user_with_most_playtime]\n",
-    "    # Crear una lista de acumulación de horas jugadas por año\n",
-    "    hours_played_by_year = [{'Año': year, 'Horas': playtime} for year, playtime in zip(user_most_playtime_data['release_date'], user_most_playtime_data['playtime_forever'])]\n",
-    "    # Devolver el resultado como un diccionario\n",
-    "    result = {\n",
-    "        f\"Usuario con más horas jugadas para Género {genero}\": user_with_most_playtime,\n",
-    "        \"Horas jugadas\": hours_played_by_year\n",
-    "    }\n",
-    "    return result\n",
+    "def PlayTimeGenre2(genero: str):\n",
+    "    # Función lambda para verificar si el género está presente en cada lista de géneros\n",
+    "    df_games[genero] = df_games['genres'].apply(lambda x: genero in x)\n",
+    "    \n",
+    "    # Filtrar el DataFrame para obtener solo las filas donde el género está presente\n",
+    "    filtered_df = df_games[df_games[genero] == True]\n",
     "\n",
-    "# Ejemplo de uso de la función\n",
-    "genero = 'Action'\n",
-    "resultados = user_for_genre(genero)\n",
-    "print(resultados)\n"
+    "    if filtered_df.empty:\n",
+    "        return {\"message\": \"El género solicitado no está presente en los datos\"}\n",
+    "\n",
+    "    # Supongo que tienes un DataFrame df_genres y df_items definidos en otro lugar del código\n",
+    "    # Realizar un inner join entre df_genres y df_items usando 'id' como clave\n",
+    "    merged_df = df_genres.merge(df_items, left_on='id', right_on='item_id', how='inner')\n",
+    "\n",
+    "    # Realizar otro inner join con filtered_df usando 'id' como clave\n",
+    "    final_df = merged_df.merge(filtered_df, on='id', how='inner')\n",
+    "\n",
+    "    # Calcular la suma de las horas jugadas por año\n",
+    "    playtime_by_year = final_df.groupby(final_df['release_date'].dt.year)['playtime_forever'].sum()\n",
+    "\n",
+    "    # Encontrar el año con más horas jugadas\n",
+    "    year_with_most_playtime = playtime_by_year.idxmax().item()  # Convierte a tipo de dato nativo\n",
+    "    return {f\"Año con mas horas para el genero {genero}\": year_with_most_playtime}\n",
+    "\n",
+    "print(PlayTimeGenre2('Action'))"
    ]
   },
   {
