--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -26,17 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_games = pd.read_csv('./games.csv', parse_dates=['release_date'])\n",
+    "df_games = pd.read_csv('./gamesNoGS.csv', parse_dates=['release_date'])\n",
     "df_items = pd.read_csv('./items.csv')\n",
     "df_reviews = pd.read_csv('./reviews_sentiment_analysis.csv')\n",
-    "df_genres = pd.read_csv('./games_genres.csv')\n",
-    "df_specs = pd.read_csv('./games_specs.csv')\n",
-    "# df_games = pd.read_csv('./games.csv', parse_dates=['release_date'])"
+    "df_genres = pd.read_csv('./games_genres.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -62,8 +60,8 @@
        "      <th></th>\n",
        "      <th>app_name</th>\n",
        "      <th>release_date</th>\n",
-       "      <th>price</th>\n",
        "      <th>id</th>\n",
+       "      <th>precios</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -71,57 +69,118 @@
        "      <th>0</th>\n",
        "      <td>Lost Summoner Kitty</td>\n",
        "      <td>2018-01-04</td>\n",
-       "      <td>4.99</td>\n",
        "      <td>761140</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Ironbound</td>\n",
        "      <td>2018-01-04</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>643980</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Real Pool 3D - Poolians</td>\n",
        "      <td>2017-07-24</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>670290</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>弹炸人2222</td>\n",
        "      <td>2017-12-07</td>\n",
-       "      <td>0.99</td>\n",
        "      <td>767400</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Battle Royale Trainer</td>\n",
        "      <td>2018-01-04</td>\n",
-       "      <td>3.99</td>\n",
        "      <td>772540</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>SNOW - All Access Basic Pass</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>774276</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>SNOW - All Access Pro Pass</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>774277</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>SNOW - All Access Legend Pass</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>774278</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Race</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>768800</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Uncanny Islands</td>\n",
+       "      <td>1900-01-01</td>\n",
+       "      <td>768570</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Army of Tentacles: (Not) A Cthulhu Dating Sim:...</td>\n",
+       "      <td>2018-01-04</td>\n",
+       "      <td>770380</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  app_name release_date  price      id\n",
-       "0      Lost Summoner Kitty   2018-01-04   4.99  761140\n",
-       "1                Ironbound   2018-01-04   0.00  643980\n",
-       "2  Real Pool 3D - Poolians   2017-07-24   0.00  670290\n",
-       "3                  弹炸人2222   2017-12-07   0.99  767400\n",
-       "4    Battle Royale Trainer   2018-01-04   3.99  772540"
+       "                                             app_name release_date      id  \\\n",
+       "0                                 Lost Summoner Kitty   2018-01-04  761140   \n",
+       "1                                           Ironbound   2018-01-04  643980   \n",
+       "2                             Real Pool 3D - Poolians   2017-07-24  670290   \n",
+       "3                                             弹炸人2222   2017-12-07  767400   \n",
+       "4                               Battle Royale Trainer   2018-01-04  772540   \n",
+       "5                        SNOW - All Access Basic Pass   2018-01-04  774276   \n",
+       "6                          SNOW - All Access Pro Pass   2018-01-04  774277   \n",
+       "7                       SNOW - All Access Legend Pass   2018-01-04  774278   \n",
+       "8                                                Race   2018-01-04  768800   \n",
+       "9                                     Uncanny Islands   1900-01-01  768570   \n",
+       "10  Army of Tentacles: (Not) A Cthulhu Dating Sim:...   2018-01-04  770380   \n",
+       "\n",
+       "    precios  \n",
+       "0         1  \n",
+       "1         0  \n",
+       "2         0  \n",
+       "3         1  \n",
+       "4         1  \n",
+       "5         2  \n",
+       "6         3  \n",
+       "7         3  \n",
+       "8         0  \n",
+       "9         0  \n",
+       "10        2  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_games.head()"
+    "df_games.head(11)"
    ]
   },
   {
@@ -306,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +402,6 @@
        "      <th>Sports</th>\n",
        "      <th>Massively Multiplayer</th>\n",
        "      <th>Racing</th>\n",
-       "      <th>Utilities</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -356,7 +414,6 @@
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -379,7 +436,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -396,7 +452,6 @@
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -405,7 +460,6 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -430,172 +484,97 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>774276</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       id  Indie  Action  Casual  Adventure  Strategy  Simulation  RPG  \\\n",
-       "0  761140    1.0     1.0     1.0        0.0       1.0         1.0  0.0   \n",
-       "1  643980    1.0     0.0     0.0        0.0       1.0         0.0  1.0   \n",
-       "2  670290    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
-       "3  767400    0.0     1.0     1.0        1.0       0.0         0.0  0.0   \n",
-       "4  772540    0.0     1.0     0.0        1.0       0.0         1.0  0.0   \n",
-       "\n",
-       "   Free to Play  Early Access  Sports  Massively Multiplayer  Racing  \\\n",
-       "0           0.0           0.0     0.0                    0.0     0.0   \n",
-       "1           1.0           0.0     0.0                    0.0     0.0   \n",
-       "2           1.0           0.0     1.0                    0.0     0.0   \n",
-       "3           0.0           0.0     0.0                    0.0     0.0   \n",
-       "4           0.0           0.0     0.0                    0.0     0.0   \n",
-       "\n",
-       "   Utilities  \n",
-       "0        0.0  \n",
-       "1        0.0  \n",
-       "2        0.0  \n",
-       "3        0.0  \n",
-       "4        0.0  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_genres.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>Single-player</th>\n",
-       "      <th>Steam Achievements</th>\n",
-       "      <th>Downloadable Content</th>\n",
-       "      <th>Steam Trading Cards</th>\n",
-       "      <th>Steam Cloud</th>\n",
-       "      <th>Multi-player</th>\n",
-       "      <th>Full controller support</th>\n",
-       "      <th>Partial Controller Support</th>\n",
-       "      <th>Steam Leaderboards</th>\n",
-       "      <th>Co-op</th>\n",
-       "      <th>Shared/Split Screen</th>\n",
-       "      <th>Cross-Platform Multiplayer</th>\n",
-       "      <th>Stats</th>\n",
-       "      <th>Online Multi-Player</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>761140</td>\n",
+       "      <th>6</th>\n",
+       "      <td>774277</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>774278</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>768800</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>768570</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>643980</td>\n",
+       "      <th>10</th>\n",
+       "      <td>770380</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>670290</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>767400</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>772540</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -607,42 +586,40 @@
        "</div>"
       ],
       "text/plain": [
-       "       id  Single-player  Steam Achievements  Downloadable Content  \\\n",
-       "0  761140            1.0                 0.0                   0.0   \n",
-       "1  643980            1.0                 1.0                   0.0   \n",
-       "2  670290            1.0                 0.0                   0.0   \n",
-       "3  767400            1.0                 0.0                   0.0   \n",
-       "4  772540            1.0                 1.0                   0.0   \n",
+       "        id  Indie  Action  Casual  Adventure  Strategy  Simulation  RPG  \\\n",
+       "0   761140    1.0     1.0     1.0        0.0       1.0         1.0  0.0   \n",
+       "1   643980    1.0     0.0     0.0        0.0       1.0         0.0  1.0   \n",
+       "2   670290    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
+       "3   767400    0.0     1.0     1.0        1.0       0.0         0.0  0.0   \n",
+       "4   772540    0.0     1.0     0.0        1.0       0.0         1.0  0.0   \n",
+       "5   774276    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "6   774277    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "7   774278    1.0     0.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "8   768800    1.0     0.0     1.0        0.0       0.0         1.0  0.0   \n",
+       "9   768570    1.0     1.0     0.0        0.0       0.0         1.0  0.0   \n",
+       "10  770380    1.0     1.0     1.0        1.0       0.0         0.0  1.0   \n",
        "\n",
-       "   Steam Trading Cards  Steam Cloud  Multi-player  Full controller support  \\\n",
-       "0                  0.0          0.0           0.0                      0.0   \n",
-       "1                  1.0          0.0           1.0                      0.0   \n",
-       "2                  0.0          0.0           1.0                      0.0   \n",
-       "3                  0.0          0.0           0.0                      0.0   \n",
-       "4                  0.0          0.0           0.0                      0.0   \n",
-       "\n",
-       "   Partial Controller Support  Steam Leaderboards  Co-op  Shared/Split Screen  \\\n",
-       "0                         0.0                 0.0    0.0                  0.0   \n",
-       "1                         0.0                 0.0    0.0                  0.0   \n",
-       "2                         0.0                 0.0    0.0                  0.0   \n",
-       "3                         0.0                 0.0    0.0                  0.0   \n",
-       "4                         0.0                 0.0    0.0                  0.0   \n",
-       "\n",
-       "   Cross-Platform Multiplayer  Stats  Online Multi-Player  \n",
-       "0                         0.0    0.0                  0.0  \n",
-       "1                         1.0    0.0                  1.0  \n",
-       "2                         0.0    1.0                  1.0  \n",
-       "3                         0.0    0.0                  0.0  \n",
-       "4                         0.0    0.0                  0.0  "
+       "    Free to Play  Early Access  Sports  Massively Multiplayer  Racing  \n",
+       "0            0.0           0.0     0.0                    0.0     0.0  \n",
+       "1            1.0           0.0     0.0                    0.0     0.0  \n",
+       "2            1.0           0.0     1.0                    0.0     0.0  \n",
+       "3            0.0           0.0     0.0                    0.0     0.0  \n",
+       "4            0.0           0.0     0.0                    0.0     0.0  \n",
+       "5            1.0           0.0     1.0                    0.0     0.0  \n",
+       "6            1.0           0.0     1.0                    0.0     0.0  \n",
+       "7            1.0           0.0     1.0                    0.0     0.0  \n",
+       "8            0.0           0.0     0.0                    0.0     1.0  \n",
+       "9            0.0           1.0     0.0                    0.0     0.0  \n",
+       "10           0.0           0.0     0.0                    0.0     0.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_specs.head()"
+    "df_genres.head(11)"
    ]
   },
   {
