--- a/ml.ipynb
+++ b/ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,16 @@
     "df_games = pd.read_csv('./gamesNoGS.csv', parse_dates=['release_date'])\n",
     "df_genres = pd.read_csv('./games_genres.csv')\n",
     "# Combinar los DataFrames\n",
-    "df = pd.merge(df_games, df_genres, on='id')\n",
-    "\n",
     "# Eliminar columnas innecesarias\n",
     "# df.drop(['release_date'], axis=1, inplace=True)\n",
     "\n",
     "# Rellenar valores faltantes con ceros\n",
-    "df.fillna(0, inplace=True)"
+    "#df.fillna(0, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +98,7 @@
        "4    Battle Royale Trainer   2018-01-04  772540        1"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,25 +285,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['TRIZEAL Remix', 'Killing Floor - Community Weapon Pack 2', 'Tron 2.0', 'Aliens vs Predator™ Bughunt Map Pack', 'Escape From Paradise 2']\n"
+      "['Half-Life: Blue Shift', 'Half-Life 2', 'Half-Life: Source', 'Day of Defeat: Source', 'Half-Life Deathmatch: Source']\n"
      ]
     }
    ],
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
     "\n",
-    "def recomendacion_juego(id_producto, df, num_recomendaciones=5):\n",
+    "def recomendacion_juego(id_producto, num_recomendaciones=5):\n",
+    "    df = df_games.merge(df_genres, on='id', how='inner')\n",
     "    # Obtener el vector de géneros del juego de entrada\n",
-    "    juego_vector = df[df['id'] == id_producto].iloc[:, 3:].values.reshape(1, -1)\n",
+    "    juego_vector = df[df['id'] == id_producto].iloc[:, 2:].values.reshape(1, -1)\n",
     "    # Calcular la similitud del coseno entre el juego de entrada y todos los demás juegos\n",
-    "    similarity_scores = cosine_similarity(df.iloc[:, 3:], juego_vector)\n",
+    "    similarity_scores = cosine_similarity(df.iloc[:, 2:], juego_vector)\n",
     "    # Obtener los índices de los juegos más similares\n",
     "    similar_indices = similarity_scores.argsort(axis=0)[::-1][:num_recomendaciones]\n",
     "\n",
@@ -315,8 +314,8 @@
     "    return recomendaciones\n",
     "\n",
     "# Ejemplo de uso\n",
-    "id_producto = 10  # ID de un juego de entrada\n",
-    "recomendaciones = recomendacion_juego(id_producto, df)\n",
+    "id_producto = 130  # ID de un juego de entrada\n",
+    "recomendaciones = recomendacion_juego(id_producto)\n",
     "print(recomendaciones)"
    ]
   }
